welcome.lessons.welcome.summative.Moria.scala.code
while(!estSurBiscuit() && !estFaceMur() {
  avance()
}
prendBiscuit()
while(!estSurBiscuit()) {
  recule()
}
avance()
poseBiscuit()
droite()
avance()
gauche()
avance()